--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,5 +10,6 @@
                 <li><a href="">VISIT US</a></li>
             </ul>
         </footer>
+        <script src="/javascripts/script.js"></script>
     </body>
 </html>
