--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,13 @@
     </head>
     <body>
         <nav>
-            <a id="home" href="/" <% if(active==0){ %> class = "active"<%}%>>Home</a>
-            <ul>
-                <li <% if(active==1){ %> class = "active"<%}%>><a href="/about">About</a></li>
-                <li <% if(active==2){ %> class = "active"<%}%>><a href="/programme/btech">UG & PG programmes</a></li>
-                <li <% if(active==3){ %> class = "active"<%}%>><a href="/innovations">Innovations</a></li>
-                <li <% if(active==4){ %> class = "active"<%}%>><a href="/statistics">Statistics</a></li>
-                <li <% if(active==5){ %> class = "active"<%}%>><a href="/contact/btech">Contact</a></li>
+            <a id="home" href="/" <% if(active==0){ %> class = "active"<%}%>>Home<i class="fas fa-align-justify"></i></a>
+            <ul class="nav-links">
+                <li class = "<% if(active==1){ %> active<%}%>"><a href="/about">About</a></li>
+                <li class = "<% if(active==2){ %> active<%}%>"><a href="/programme/btech">UG & PG programmes</a></li>
+                <li class = "<% if(active==3){ %> active<%}%>"><a href="/innovations">Innovations</a></li>
+                <li class = "<% if(active==4){ %> active<%}%>"><a href="/statistics">Statistics</a></li>
+                <li class = "<% if(active==5){ %> active<%}%>"><a href="/contact/btech">Contact</a></li>
             </ul>
         </nav>
         <header>
